--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,46 +1,20 @@
-# services:
-#   postgres:
-#     image: postgres
-#     user: postgres
-#     environment:
-#       POSTGRES_USER: root
-#       POSTGRES_PASSWORD: root
-#       POSTGRES_DB: test_db
-#     ports:
-#       - '5432:5432'
-
-#   pgadmin:
-#     container_name: pgadmin4_container
-#     image: dpage/pgadmin4
-#     restart: always
-#     environment:
-#       PGADMIN_DEFAULT_EMAIL: admin@admin.com
-#       PGADMIN_DEFAULT_PASSWORD: root
-#     ports:
-#       - '5050:80'
-
-version: '3.8'
-
 services:
-  db:
-    container_name: postgres-migration
+  postgres:
     image: postgres
-    restart: always
+    user: postgres
     environment:
-      - POSTGRES_USER=${TYPEORM_USERNAME}
-      - POSTGRES_PASSWORD=${TYPEORM_PASSWORD}
-      - POSTGRES_DB=${TYPEORM_DATABASE}
-    volumes:
-      - ./pgdata:/var/lib/postgresql/data
+      POSTGRES_USER: root
+      POSTGRES_PASSWORD: root
+      POSTGRES_DB: test_db
     ports:
-      - ${TYPEORM_PORT}:${TYPEORM_PORT}
+      - '5432:5432'
 
   pgadmin:
     container_name: pgadmin4_container_migration
     image: dpage/pgadmin4
     restart: always
     environment:
-      - PGADMIN_DEFAULT_EMAIL=${PGADMIN_DEFAULT_EMAIL}
-      - PGADMIN_DEFAULT_PASSWORD=${PGADMIN_DEFAULT_PASSWORD}
+      PGADMIN_DEFAULT_EMAIL: admin@admin.com
+      PGADMIN_DEFAULT_PASSWORD: root
     ports:
       - '5050:80'
